# spherefracture

./: CMakeLists.txt
common/: controls.cpp  controls.hpp  objloader.cpp  objloader.hpp
openscad/: puzzlepieces.scad  puzzlepiecesFrank.scad  runFragmentation.sh  runPuzzleGenerator.py  runVaseFrank.sh  test.scad  testfragment.stl
openscad/fragmentsphere/: fragment_0 copy.stl  fragment_0.stl  fragment_1.stl  fragment_10.stl  fragment_11.stl  fragment_12.stl  fragment_13.stl  fragment_2.stl  fragment_3.stl  fragment_4.stl  fragment_5.stl  fragment_6.stl  fragment_7.stl  fragment_8.stl  fragment_9.stl
openscad/result/: part0.stl  part10.stl  part11.stl  part2.stl  part3.stl  part4.stl  part5.stl  part6.stl  part7.stl  part8.stl  part9.stl
source/: Fragment.cpp  Fragment.hpp  Fragmenter.cpp  Fragmenter.hpp  Geometry.cpp  Geometry.hpp  JaggedLine.cpp  JaggedLine.hpp  SimpleFragmentShader.hlsl  SimpleVertexShader.hlsl  View.cpp  View.hpp  common.h  main.cpp
source/matlab/: debug_start_poly_1.mat  fractaltest.m  normalize.m  sphereArcsPlot.m  sphereEdgeIntersect.m  sphereEdgeSignedDistance.m  spherePolyAngle.m  spherePolyArea.m  spherePolyConvexHull.m  spherePolyInsideTest.m  spherePolyIntersect.m  spherePolyOffset.m  spherePolyPlot.m  spherePolyRandomFracture.m  tests.m  tryCut.m
